--- a/twitter/Base.lproj/Main.storyboard
+++ b/twitter/Base.lproj/Main.storyboard
@@ -875,7 +875,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" text="created_at" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="qV7-Lf-ajb">
-                                <rect key="frame" x="10" y="168.5" width="355" height="14"/>
+                                <rect key="frame" x="10" y="415" width="355" height="14"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="14" id="5Df-fa-PIp"/>
                                 </constraints>
@@ -884,7 +884,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="r_count" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9J5-gc-6CP">
-                                <rect key="frame" x="10" y="203.5" width="40.5" height="14"/>
+                                <rect key="frame" x="10" y="450" width="40.5" height="14"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="14" id="vaE-bh-jKR"/>
                                 </constraints>
@@ -893,7 +893,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="f_count" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hSB-Gl-Ift">
-                                <rect key="frame" x="119" y="203.5" width="41" height="14"/>
+                                <rect key="frame" x="119" y="450" width="41" height="14"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="14" id="dQC-4C-yvH"/>
                                 </constraints>
@@ -902,7 +902,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kxe-OH-mFh">
-                                <rect key="frame" x="60" y="234" width="30" height="30"/>
+                                <rect key="frame" x="60" y="480.5" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="DRb-6z-rxy"/>
                                     <constraint firstAttribute="width" constant="30" id="HC2-w6-QiV"/>
@@ -913,7 +913,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wEm-QJ-Gif">
-                                <rect key="frame" x="172.5" y="234" width="30" height="30"/>
+                                <rect key="frame" x="172.5" y="480.5" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="AJv-fM-Ogh"/>
                                     <constraint firstAttribute="width" constant="30" id="U7W-PO-zYU"/>
@@ -925,7 +925,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1gp-Sc-eAW">
-                                <rect key="frame" x="285" y="234" width="30" height="30"/>
+                                <rect key="frame" x="285" y="480.5" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="PmW-98-Ng3"/>
                                     <constraint firstAttribute="height" constant="30" id="YVt-79-nDz"/>
@@ -937,21 +937,21 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OAt-QO-YRj">
-                                <rect key="frame" x="8" y="192.5" width="359" height="1"/>
+                                <rect key="frame" x="8" y="439" width="359" height="1"/>
                                 <color key="backgroundColor" systemColor="systemGray4Color" red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="SQr-HW-id7"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fc7-9d-4Tb">
-                                <rect key="frame" x="8" y="228" width="359" height="1"/>
+                                <rect key="frame" x="8" y="474.5" width="359" height="1"/>
                                 <color key="backgroundColor" systemColor="systemGray4Color" red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="B75-jh-eQ4"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Likes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="65s-TP-yyd">
-                                <rect key="frame" x="165" y="203" width="27.5" height="15"/>
+                                <rect key="frame" x="165" y="449.5" width="27.5" height="15"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="15" id="bU0-aF-HaJ"/>
                                 </constraints>
@@ -960,7 +960,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Retweets" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pdt-bz-nVf">
-                                <rect key="frame" x="55.5" y="203" width="48.5" height="15"/>
+                                <rect key="frame" x="55.5" y="449.5" width="48.5" height="15"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="15" id="dNk-Je-WEv"/>
                                 </constraints>
@@ -968,12 +968,20 @@
                                 <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RX2-8s-HpZ">
+                                <rect key="frame" x="10" y="168.5" width="355" height="236.5"/>
+                                <color key="backgroundColor" systemColor="systemGray5Color" red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="RX2-8s-HpZ" secondAttribute="height" multiplier="3:2" id="7Rt-3u-Pe6"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="OAt-QO-YRj" firstAttribute="leading" secondItem="amw-pQ-xtk" secondAttribute="leading" constant="8" id="2So-Yq-iI4"/>
                             <constraint firstItem="6Lg-uC-c8d" firstAttribute="trailing" secondItem="SpX-It-MKL" secondAttribute="trailing" constant="10" id="2n1-uO-dWs"/>
+                            <constraint firstItem="qV7-Lf-ajb" firstAttribute="top" relation="greaterThanOrEqual" secondItem="7Ow-wf-CyE" secondAttribute="bottom" priority="250" constant="10" id="3YX-XS-XMD"/>
                             <constraint firstItem="wEm-QJ-Gif" firstAttribute="centerY" secondItem="Kxe-OH-mFh" secondAttribute="centerY" id="4f5-sR-Y9g"/>
                             <constraint firstAttribute="trailing" secondItem="Fc7-9d-4Tb" secondAttribute="trailing" constant="8" id="5Dm-wH-lhb"/>
                             <constraint firstAttribute="trailing" secondItem="OAt-QO-YRj" secondAttribute="trailing" constant="8" id="6LP-l6-eNE"/>
@@ -983,9 +991,9 @@
                             <constraint firstItem="7Ow-wf-CyE" firstAttribute="top" secondItem="RFv-Kk-6ou" secondAttribute="bottom" constant="15" id="8wS-bD-zun"/>
                             <constraint firstItem="9J5-gc-6CP" firstAttribute="top" secondItem="OAt-QO-YRj" secondAttribute="bottom" constant="10" id="CQZ-ys-Ed6"/>
                             <constraint firstItem="aEc-PR-VNV" firstAttribute="leading" secondItem="RFv-Kk-6ou" secondAttribute="trailing" constant="10" id="Fen-al-0jv"/>
-                            <constraint firstItem="qV7-Lf-ajb" firstAttribute="top" secondItem="7Ow-wf-CyE" secondAttribute="bottom" constant="10" id="HPq-92-nxA"/>
                             <constraint firstItem="65s-TP-yyd" firstAttribute="centerY" secondItem="9J5-gc-6CP" secondAttribute="centerY" id="ObZ-hf-DQ3"/>
                             <constraint firstItem="hSB-Gl-Ift" firstAttribute="centerY" secondItem="9J5-gc-6CP" secondAttribute="centerY" id="Pgh-S9-ZR6"/>
+                            <constraint firstItem="qV7-Lf-ajb" firstAttribute="top" secondItem="RX2-8s-HpZ" secondAttribute="bottom" constant="10" id="TCx-Qn-wVU"/>
                             <constraint firstItem="1gp-Sc-eAW" firstAttribute="centerX" secondItem="amw-pQ-xtk" secondAttribute="centerX" multiplier="8:5" id="U0K-dU-0yO"/>
                             <constraint firstItem="6Lg-uC-c8d" firstAttribute="trailing" secondItem="qV7-Lf-ajb" secondAttribute="trailing" constant="10" id="U2D-NJ-m6a"/>
                             <constraint firstItem="6Lg-uC-c8d" firstAttribute="trailing" secondItem="aEc-PR-VNV" secondAttribute="trailing" constant="10" id="UIY-1F-Lyf"/>
@@ -1000,11 +1008,14 @@
                             <constraint firstItem="qV7-Lf-ajb" firstAttribute="leading" secondItem="6Lg-uC-c8d" secondAttribute="leading" constant="10" id="jhx-Vh-7Vf"/>
                             <constraint firstItem="SpX-It-MKL" firstAttribute="leading" secondItem="RFv-Kk-6ou" secondAttribute="trailing" constant="10" id="kbZ-I3-JaF"/>
                             <constraint firstItem="SpX-It-MKL" firstAttribute="centerY" secondItem="RFv-Kk-6ou" secondAttribute="centerY" constant="-18" id="luh-2C-sbh"/>
+                            <constraint firstItem="RX2-8s-HpZ" firstAttribute="leading" secondItem="7Ow-wf-CyE" secondAttribute="leading" id="nOK-mT-Xzv"/>
+                            <constraint firstItem="RX2-8s-HpZ" firstAttribute="trailing" secondItem="7Ow-wf-CyE" secondAttribute="trailing" id="neQ-LA-T8z"/>
                             <constraint firstItem="1gp-Sc-eAW" firstAttribute="centerY" secondItem="Kxe-OH-mFh" secondAttribute="centerY" id="qjc-zx-ck4"/>
                             <constraint firstItem="OAt-QO-YRj" firstAttribute="top" secondItem="qV7-Lf-ajb" secondAttribute="bottom" constant="10" id="rd1-q9-tav"/>
                             <constraint firstItem="Fc7-9d-4Tb" firstAttribute="top" secondItem="65s-TP-yyd" secondAttribute="bottom" constant="10" id="rgX-8y-zYM"/>
                             <constraint firstItem="6Lg-uC-c8d" firstAttribute="trailing" secondItem="7Ow-wf-CyE" secondAttribute="trailing" constant="10" id="vn6-kl-eNT"/>
                             <constraint firstItem="65s-TP-yyd" firstAttribute="leading" secondItem="hSB-Gl-Ift" secondAttribute="trailing" constant="5" id="vwe-u9-JmS"/>
+                            <constraint firstItem="RX2-8s-HpZ" firstAttribute="top" secondItem="7Ow-wf-CyE" secondAttribute="bottom" constant="10" id="woc-Y6-7oH"/>
                             <constraint firstItem="Pdt-bz-nVf" firstAttribute="centerY" secondItem="9J5-gc-6CP" secondAttribute="centerY" id="ymK-eY-m6M"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Lg-uC-c8d"/>
@@ -1018,6 +1029,8 @@
                         <outlet property="createdAtLabel" destination="qV7-Lf-ajb" id="4eA-Pc-Dk0"/>
                         <outlet property="favoriteButton" destination="1gp-Sc-eAW" id="rkA-wG-FVz"/>
                         <outlet property="favoriteCountLabel" destination="hSB-Gl-Ift" id="27m-AY-0JX"/>
+                        <outlet property="mediaConstraint" destination="TCx-Qn-wVU" id="9Ym-e1-yFQ"/>
+                        <outlet property="mediaImageView" destination="RX2-8s-HpZ" id="SRH-d7-5IJ"/>
                         <outlet property="profileImageView" destination="RFv-Kk-6ou" id="lg2-H0-SFJ"/>
                         <outlet property="retweetButton" destination="wEm-QJ-Gif" id="Hyg-X7-w8G"/>
                         <outlet property="retweetCountLabel" destination="9J5-gc-6CP" id="lMD-Zc-LmX"/>
@@ -1032,7 +1045,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="3614" y="36"/>
+            <point key="canvasLocation" x="3613.5999999999999" y="35.532233883058474"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="RRP-Xt-fw7">
@@ -1075,8 +1088,8 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="hnd-5c-w0d"/>
-        <segue reference="lg5-YO-iTY"/>
+        <segue reference="4Tb-lO-KaX"/>
+        <segue reference="vSI-tp-98M"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="TwitterLogoBlue" width="200" height="200"/>
